hard-gists/82d3bb091d45b59c1d7674727b1292a7/run.log
=== Docker Run Log for 82d3bb091d45b59c1d7674727b1292a7 ===
Started at: Mi 29. Okt 17:42:56 CET 2025

[2025-10-29 17:42:57] START: Running container for 82d3bb091d45b59c1d7674727b1292a7
[2025-10-29 17:42:57] SUCCESS: Container 5141922fd50e2e77493a1fbeba6c1110462bb5a50d952a1d35eaf65dbcfd3c88 started for 82d3bb091d45b59c1d7674727b1292a7
=== Container logs for 82d3bb091d45b59c1d7674727b1292a7 ===
  File "/snippet.py", line 127
    except gflags.FlagsError, e:
           ^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 82d3bb091d45b59c1d7674727b1292a7 ===
[2025-10-29 17:42:59] INFO: Container 5141922fd50e2e77493a1fbeba6c1110462bb5a50d952a1d35eaf65dbcfd3c88 has stopped
